# demo_test

./: CMakeLists.txt  package.xml
launch/: initialize.launch  test.launch
meshes/: base_link.STL  base_rot.STL  camera.STL  frig.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  plate.STL
src/: kpkv_serviceClient.cpp  platform_controller.cpp  platform_trajectory_action_client.cpp  robot_controller.cpp  robot_trajectory_action_client.cpp  robot_trajectory_action_server.cpp
urdf/: conveyor_belt.urdf  cube.urdf  demo.urdf  gripper_robot.urdf  gripper_robot_backup.urdf  robot_arm (copy).urdf  robot_arm.urdf  robot_demo.urdf  rotational_platform.urdf
